--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,6 @@
 end_of_line = lf
 insert_final_newline = true
 
-[*.css, *.html, *.{js,json}]
+[*.css, *.html, *.{js,json}, *.{yml,yaml}]
 indent_style=space
 indent_size=2
