--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,9 @@
 {
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "github-webextension@klingt.net"
+        }
+    },
     "content_scripts": [
         {
             "js": [
