--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Release artifact
+    name: Release WebExtension
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -19,7 +19,9 @@ jobs:
         run: echo "./node_modules/.bin" >> $GITHUB_PATH
       - name: Build WebExtension
         run: web-ext build
-      - name: Release
+      - name: Sign WebExtension
+        run: web-ext sign --api-key $API_KEY --api-secret $API_SECRET
+      - name: Release WebExtension
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
