--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Release WebExtension
+    name: Release artifact
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,7 +21,7 @@ jobs:
         run: web-ext build
       - name: Sign WebExtension
         run: web-ext sign --api-key $API_KEY --api-secret $API_SECRET
-      - name: Release WebExtension
+      - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
