Fix artifact upload
The sigining command will return an .xpi addon file.  This is actually
the signed addon file that is required to install it.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,4 +30,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: web-ext-artifacts/github_webextension-*.zip
+          files: web-ext-artifacts/*.xpi
